--- a/Caldwell.Infrastructure/Caldwell.Infrastructure.csproj
+++ b/Caldwell.Infrastructure/Caldwell.Infrastructure.csproj
@@ -20,4 +20,10 @@
     <ProjectReference Include="..\Caldwell.Core\Caldwell.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Crawler\Pipeline\" />
+    <Folder Include="Crawler\Processor\" />
+    <Folder Include="Crawler\Request\" />
+  </ItemGroup>
+
 </Project>
